tests/PhiCore/compile_failure/src/Core/Integer.float.fail.cpp
#include <Phi/Core/Integer.hpp>

int main()
{
    phi::Integer<float> i{7};
}
